fix: remove overflow on Header

--- a/packages/modal/src/Modal/components/Header/Header.scss
+++ b/packages/modal/src/Modal/components/Header/Header.scss
@@ -5,7 +5,6 @@
 .header {
   padding: $spacing-md 48px $spacing-md $spacing-md;
   border-radius: $border-solid-border-radius;
-  overflow: auto;
 }
 
 .positive {
